# prml-project

./: .gitignore  CONCEPT_EXPLANATION_SIMPLE.md  Global_How_To_Run.md  QUICK_START.md  README.md  README_SETUP_COMPLETE.md  START_TRAINING_NOW.md  TRAINING_LOG.md  app.py  dataset.py  documentation.md  documentation.tex  evaluate.py  inference.py  main.ipynb  plan.md  prml-project - Google Slides.url  requirements.txt  run_training.sh  run_tuning_v3_resume.sh  run_tuning_v4_3spk.sh  run_tuning_v5_denoise.sh  setup_env.sh  train.py  utils.py
anirudh/: .gitignore  COMPLETE_SETUP.md  HOW_TO_RUN.md  SETUP_COMPLETE.txt  TRAINING_LOG.md
anirudh/cocktail_separation/: .gitignore  INFERENCE_GUIDE.md  PERFORMANCE_ANALYSIS.md  api.py  check_gpu3_training.py  evaluate.py  (+10 more)
cocktail_separation/: .gitignore  PHASE2_TRAINING_STATUS.md  QUICK_INFERENCE.sh  README.md  check_phase_metrics.py  evaluate.py  finetune_gpu3.py  finetune_real.py  generate_librispeech_mixtures.py  generate_mixtures_from_librispeech.py  infer_gpu3.py  inference_debug.py  launch_training.py  monitor_training.py  monitor_training_live.py  requirements.txt  run_auto_pipeline.sh  run_full_pipeline.sh  run_optimized_training.sh  separate.py  train.py  train_enhanced.py  train_full.py  train_librispeech.py  train_phase2_only.py  train_v3.py  training_history_gpu3.json
configs/: default.yaml
data/: dataset.py
frontend/: index.html
gokul/: .gitignore  CMakeLists.txt  README.md  api.py  gui.py  model.py
gokul/scripts/: generate_librimix.sh
gokul/src/: audio_utils.cpp  audio_utils.h  augmentation.cpp  conv_tasnet.cpp  dataset.cpp  dataset.h  inference.cpp  losses.h  preprocessing.cpp  preprocessing.h  stft.cpp  train.cpp  unet.cpp
losses/: pit_loss.py
mayank/: api.py  dataset.py  experiment_results.md.resolved  model.py  requirements.txt  run_tuning_scaled.sh  run_tuning_v3.sh  training_history.txt
models/: __init__.py  decoder.py  dprnn.py  dprnn_block.py  dprnn_tasnet.py  encoder.py
mohit/: .gitignore  CONCEPT_EXPLANATION.md  CONCEPT_EXPLANATION_SIMPLE.md  PROJECT_STATUS.md  TMUX_COMMANDS.md  api.py  dataset.py  documentation.md  inference.py  model.py  prepare_data.py  requirements.txt  split_checkpoint.py  train.py  utils.py
scripts/: generate_librimix.sh
src/: audio_utils.cpp  audio_utils.h  augmentation.h  conv_tasnet.h  dataset.cpp  gui.cpp  inference.cpp  losses.cpp  metrics.cpp  metrics.h  stft.h  train.cpp  unet.h
utils/: audio_utils.py  metrics.py
(+27 files in other folders)
